<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f7f1">

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/feedback_iv"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_contact_background"
            android:contentDescription="@string/feedback"
            android:padding="16dp"
            android:src="@drawable/chat_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/feedback_tv"
            app:layout_constraintEnd_toStartOf="@id/telegram_iv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/feedback_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/feedback"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/feedback_iv"
            app:layout_constraintStart_toStartOf="@id/feedback_iv"
            app:layout_constraintTop_toBottomOf="@id/feedback_iv"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/telegram_iv"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/main_contact_background"
            android:contentDescription="@string/write_telegram"
            android:padding="16dp"
            android:src="@drawable/telegram_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/feedback_iv"
            app:layout_constraintTop_toTopOf="@id/feedback_iv"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/telegram_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/write_telegram"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/telegram_iv"
            app:layout_constraintStart_toStartOf="@id/telegram_iv"
            app:layout_constraintTop_toBottomOf="@id/telegram_iv"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/main_contacts_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/contact"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/main_contacts_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/main_contacts_title_tv"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <org.bessonov.android_developer.view.ContactItemView
                    android:id="@+id/telegram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/telegram_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="@string/telegram"
                    tools:value="anton_bessonov" />

                <org.bessonov.android_developer.view.ContactItemView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:icon="@drawable/mail_icon"
                    app:layout_constraintTop_toBottomOf="@id/telegram"
                    app:title="@string/email"
                    tools:value="anton@bessonov.org" />

                <org.bessonov.android_developer.view.ContactItemView
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:icon="@drawable/phone_icon"
                    app:layout_constraintTop_toBottomOf="@id/mail"
                    app:title="@string/tel"
                    tools:value="8 (952) 909-88-33" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/my_geo_card"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:visibility="gone"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/linkedin_iv"
            app:layout_constraintTop_toBottomOf="@id/main_contacts_card"
            tools:visibility="visible">

            <fragment
                android:id="@+id/my_geo_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                map:liteMode="true" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/linkedin_iv"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/main_contact_background"
            android:contentDescription="@string/view_profile_linkedin"
            android:padding="16dp"
            android:src="@drawable/linkedin_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/github_iv"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_geo_card"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/github_iv"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/main_contact_background"
            android:contentDescription="@string/view_profile_github"
            android:padding="16dp"
            android:src="@drawable/github_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/linkedin_iv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/linkedin_iv"
            app:layout_constraintTop_toTopOf="@id/linkedin_iv"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/all_contacts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/show_all_contacts"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>